--- a/whatsapp_config.example
+++ b/whatsapp_config.example
@@ -1,6 +1,6 @@
 phone: "XXXXXXXXXXX"
 password: "XXXXXXXXXXXXXXXX"
-reply: "whatsapp+%s@example.com"
+reply: "whatsapp+{}@example.com"
 smtp: "localhost"
 sendto: "you@example.com"
 force_starttls: 0
